[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turag_lmc"
version = "0.0.1"
authors = [
  { name="Moritz Blei", email="moritz_blei@turag.de" },
]
description = "Python interface for TURAG LMC"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "black",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tools.setuptools]
include-package-data = true